# algochat

./: .dockerignore  README.md  api.dockerfile  docker-compose.yml  index.html  package.json  web.dockerfile
.claude/: launch.json
.github/workflows/: deploy-pages.yml
api/: config.py  dotenv.tpl  main.py  pyproject.toml  run.py
api/agent_service/: agent.py  code_executor.py
api/agent_service/prompts/: system_prompt.md
api/data/mcrpc/: data_schema.md
api/routes/: chat.py
src/: App.vue  main.js  router.js  style.css
src/components/: BiomarkerPanel.vue  ChatPanel.vue  PatientProfilePanel.vue  SavedProfilesTray.vue
src/components/nodes/: BioQuestionNode.vue  BranchNode.vue  CondNode.vue  GroupNode.vue  TestNode.vue  TreatNode.vue
src/composables/: useFlowGraph.js  usePatientProfile.js
src/data/: guidelines.js  interactiveAlgorithm.js  triColumn.js
src/stores/: interactiveAlgorithm.js
src/views/: DetailView.vue  InteractiveAlgorithmView.vue  OverviewView.vue  TriColumnView.vue
web/: .env.production  dotenv.tpl  package.json
web/src/: App.vue  router.js
web/src/components/: ChatHistoryPanel.vue  ChatPanel.vue  InteractiveProfilePanel.vue  PatientProfilePanel.vue  SavedProfilesTray.vue
web/src/components/nodes/: BioQuestionNode.vue  CondNode.vue  GroupNode.vue  PriorNode.vue  PriorTreatmentNode.vue  (+3 more)
web/src/data/: interactiveAlgorithm.js  triColumn.js
web/src/stores/: allPathways.js  interactiveAlgorithm.js
web/src/utils/: chatApi.js  chatSessions.js
web/src/views/: ClassicView.vue  InteractiveAlgorithmView.vue  TriColumnView.vue
