[project]
name = "algochat-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.22",
    "fastapi>=0.136.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-dotenv>=1.2.0",
    "uvicorn[standard]>=0.48.0",
]
